# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:private"])

drake_cc_binary(
    name = "second_order_pid_cc",
    srcs = ["second_order_pid.cc"],
    deps = [
        "//common:symbolic",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram_builder",
        "//systems/primitives:symbolic_vector_system",
        "@gflags",
    ],
)

drake_py_binary(
    name = "second_order_pid_py",
    srcs = ["second_order_pid.py"],
    deps = [
        "//bindings/pydrake",
    ],
)

add_lint_tests()
