# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_binary(
    name = "car_trajectory_run",
    srcs = ["car_trajectory_run.cc"],
    data = ["box_car.urdf"],
    deps = [
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
    ],
)

add_lint_tests()
