load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)

package(default_visibility = ["//visibility:private"])

drake_cc_binary(
    name = "conveyor_belt",
    srcs = ["conveyor_belt.cc"],
    data = [
        "belt_diffuse.png",
        "belt_normal.png",
        "checker.png",
        "conveyor_belt.bin",
        "conveyor_belt.gltf",
        "conveyor_belt.sdf",
        "//examples/scene_graph:models",
    ],
    deps = [
        "//common:value",
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//multibody/fem:deformable_body_config",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:bus_value",
        "//systems/framework:diagram",
        "//systems/framework:leaf_system",
        "//systems/primitives:constant_value_source",
        "//visualization",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "conveyor_belt_simulation",
    srcs = ["conveyor_belt_simulation.cc"],
    data = [
        "belt_diffuse.png",
        "belt_normal.png",
        "sagging_belt.bin",
        "sagging_belt.gltf",
        "sagging_belt.obj",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//common:value",
        "//geometry",
        "//multibody/plant",
        "//multibody/tree",
        "//systems/analysis:simulator",
        "//systems/framework:bus_value",
        "//systems/framework:diagram",
        "//systems/primitives:constant_value_source",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
    add_test_rule = True,
    test_rule_args = [
        "--simulation_time=0.02",
        "--target_realtime_rate=0.0",
        "--visualize=false",
    ],
)

add_lint_tests()
