# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

# Place model files for this example within their own group.
# We can use these models in other bazel projects by adding the depencency
# "//examples/simple_gripper:simple_gripper_models".
filegroup(
    name = "simple_gripper_models",
    srcs = [
        "rainbow.png",
        "simple_gripper.sdf",
        "simple_mug.sdf",
        "simple_mug.urdf",
    ],
    visibility = ["//visibility:public"],
)

drake_cc_binary(
    name = "simple_gripper",
    srcs = ["simple_gripper.cc"],
    add_test_rule = 1,
    data = [
        ":simple_gripper_models",
    ],
    # The new dependency on the VTK renderer leads to lsan unhappiness.
    tags = ["no_lsan"],
    test_rule_args = [
        "--integration_scheme=runge_kutta2",
        "--simulation_time=0.01",
        "--target_realtime_rate=0.0",
    ],
    test_rule_timeout = "moderate",
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//geometry/render:render_engine_vtk",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:implicit_euler_integrator",
        "//systems/analysis:runge_kutta2_integrator",
        "//systems/analysis:runge_kutta3_integrator",
        "//systems/analysis:semi_explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:sine",
        "//systems/sensors:image_to_lcm_image_array_t",
        "//systems/sensors:rgbd_sensor",
        "@gflags",
    ],
)

add_lint_tests()
