load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/performance:defs.bzl",
    "drake_cc_googlebench_binary",
    "drake_py_experiment_binary",
)
load("//tools/skylark:drake_cc.bzl", "drake_cc_binary")
load("//tools/skylark:test_tags.bzl", "vtk_test_tags")

package(default_visibility = ["//visibility:private"])

drake_cc_googlebench_binary(
    name = "iris_np_benchmarks",
    srcs = ["iris_np_benchmarks.cc"],
    add_test_rule = True,
    data = [
        "@drake_models//:iiwa_description",
        "@drake_models//:manipulation_station",
        "@drake_models//:wsg_50_description",
    ],
    test_args = [
        "--test",
    ],
    test_timeout = "moderate",
    deps = [
        "//geometry/optimization:iris",
        "//multibody/inverse_kinematics",
        "//multibody/plant",
        "//tools/performance:fixture_common",
        "//tools/performance:gflags_main",
    ],
)

drake_py_experiment_binary(
    name = "iris_np_experiment",
    googlebench_binary = ":iris_np_benchmarks",
)

drake_cc_googlebench_binary(
    name = "mesh_intersection_benchmark",
    srcs = ["mesh_intersection_benchmark.cc"],
    add_test_rule = True,
    test_timeout = "moderate",
    deps = [
        "//common:essential",
        "//geometry/proximity:make_ellipsoid_field",
        "//geometry/proximity:make_ellipsoid_mesh",
        "//geometry/proximity:make_sphere_mesh",
        "//geometry/proximity:mesh_intersection",
        "//math",
    ],
)

drake_cc_googlebench_binary(
    name = "compliant_mesh_intersection_benchmark",
    srcs = ["compliant_mesh_intersection_benchmark.cc"],
    add_test_rule = True,
    test_timeout = "moderate",
    deps = [
        "//common:essential",
        "//geometry/proximity:hydroelastic_calculator",
        "//geometry/proximity:hydroelastic_internal",
        "//geometry/proximity:make_ellipsoid_field",
        "//geometry/proximity:make_ellipsoid_mesh",
        "//geometry/proximity:make_sphere_field",
        "//geometry/proximity:make_sphere_mesh",
        "//math",
        "//tools/performance:gflags_main",
    ],
)

drake_py_experiment_binary(
    name = "mesh_intersection_experiment",
    googlebench_binary = ":mesh_intersection_benchmark",
)

filegroup(
    name = "render_files",
    srcs = [
        "base_color.png",
        "color_texture_sphere.gltf",
        "color_texture_sphere.mtl",
        "color_texture_sphere.obj",
        "multi_texture_sphere.bin",
        "multi_texture_sphere.gltf",
        "normal.png",
        "omr.png"
    ],
)

drake_cc_googlebench_binary(
    name = "render_benchmark",
    srcs = ["render_benchmark.cc"],
    add_test_rule = True,
    data = [
        ":render_files",
    ],
    test_args = [
        # To save time, only run the low-resolution tests in CI for a single
        # iteration (dry run).
        "--benchmark_dry_run",
        "--benchmark_filter=.*/1/1/320/240",
    ],
    test_display = True,
    test_tags = vtk_test_tags(),
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_instance",
        "//geometry/render",
        "//geometry/render_gl",
        "//geometry/render_vtk",
        "//systems/sensors:image_io",
        "//tools/performance:gflags_main",
        "@fmt",
        "@gflags",
    ],
)

drake_cc_googlebench_binary(
    name = "scenario_render_benchmark",
    srcs = ["scenario_render_benchmark.cc"],
    add_test_rule = False,
    test_tags = vtk_test_tags(),
    data = [
        "@drake_models",
        ":lbm_config.yaml",
        ":manipulands.dmd.yaml",
    ],
    deps = [
        "//common:find_resource",
        "//common/yaml",
        "//geometry:scene_graph_config",
        "//lcm",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/framework:diagram_builder",
        "//systems/sensors:camera_config_functions",
        "//systems/sensors:image_io",
        "//systems/sensors:rgbd_sensor",
        "//tools/performance:gflags_main",
        "//visualization:visualization_config_functions",
        "@fmt",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "lbm_example",
    srcs = ["scenario_render_benchmark.cc"],
    defines = ["RUN_AS_BINARY"],
    data = [
        "@drake_models",
        ":lbm_config.yaml",
        ":manipulands.dmd.yaml",
    ],
    deps = [
        "//common:find_resource",
        "//common/yaml",
        "//geometry:scene_graph_config",
        "//lcm",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/framework:diagram_builder",
        "//systems/sensors:camera_config_functions",
        "//systems/sensors:image_io",
        "//systems/sensors:rgbd_sensor",
        "//visualization:visualization_config_functions",
        "@fmt",
        "@gflags",
    ],
)

drake_py_experiment_binary(
    name = "render_experiment",
    googlebench_binary = ":render_benchmark",
)

drake_cc_googlebench_binary(
    name = "proximity_defaults_benchmark",
    srcs = ["proximity_defaults_benchmark.cc"],
    add_test_rule = True,
    deps = [
        "//geometry:scene_graph",
        "//tools/performance:gflags_main",
        "@fmt",
    ],
)

drake_py_experiment_binary(
    name = "proximity_defaults_experiment",
    googlebench_binary = ":proximity_defaults_benchmark",
)

drake_cc_googlebench_binary(
    name = "boxes_overlap_benchmark",
    srcs = ["boxes_overlap_benchmark.cc"],
    add_test_rule = True,
    deps = [
        "//geometry/proximity:boxes_overlap",
        "//geometry/test_utilities:boxes_overlap_transforms",
        "//tools/performance:gflags_main",
        "@fmt",
    ],
)

drake_py_experiment_binary(
    name = "boxes_overlap_experiment",
    googlebench_binary = ":boxes_overlap_benchmark",
)

add_lint_tests()
