# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")
load("@drake//tools/workspace:forward_files.bzl", "forward_files")

_EVO_MESH = forward_files(
    srcs = ["@models//:dishes/bowls/evo_bowl_no_mtl.obj"],
    dest_prefix = "",
    strip_prefix = "@models//:dishes/bowls/",
    visibility = ["//visibility:private"],
)

drake_cc_library(
    name = "contact_result_maker",
    srcs = ["contact_result_maker.cc"],
    hdrs = ["contact_result_maker.h"],
    deps = [
        "//geometry:scene_graph",
        "//lcmtypes:contact_results_for_viz",
        "//systems/framework:leaf_system",
    ]
)

drake_cc_binary(
    name = "contact_surface_rigid_bowl_soft_ball",
    srcs = ["contact_surface_rigid_bowl_soft_ball.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--simulation_time=0.01",
    ],
    deps = [
        ":contact_result_maker",
        "//common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcmtypes:contact_results_for_viz",
        "//systems/analysis:explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "convex_collision_cost",
    srcs = ["convex_collision_cost.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--simulation_time=0.01",
    ],
    deps = [
        ":contact_result_maker",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//systems/analysis:explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "fridge_test",
    srcs = ["fridge_test.cc"],
    add_test_rule = 1,
    deps = [
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)

filegroup(
    name = "models",
    srcs = _EVO_MESH + glob(["meshes/**/*.obj",]),
)

add_lint_tests()
