# -*- python -*-

load("//tools:drake.bzl", "drake_cc_library")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "test_utilities",
    testonly = 1,
    deps = [
        ":query_test_utilities",
    ],
)

drake_cc_library(
    name = "query_test_utilities",
    testonly = 1,
    srcs = ["query_test_utility.cc"],
    hdrs = ["query_test_utility.h"],
    deps = [
        "//common/test_utilities",
        "//geometry:geometry_context",
        "//geometry:geometry_state",
        "//geometry:internal_geometry",
        "//geometry:proximity_engine",
        "//geometry/query_results",
        "@gtest//:without_main",
    ],
)

add_lint_tests()
