# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "inclined_plane_with_body",
    srcs = [
        "inclined_plane_with_body.cc",
    ],
    add_test_rule = 1,
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0.0",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//multibody/benchmarks/inclined_plane",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
)

add_lint_tests()
