# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "render_fl_scene",
    srcs = ["render_fl_scene.cc"],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//geometry/render:render_engine_vtk",
        "//geometry/render/gl_renderer",
        "//multibody/plant",
        "//multibody/parsing:parser",
        "//systems/sensors:image_writer",
        "@gflags",
    ],
)
