# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_package_library(
    name = "shaders",
    deps = [
        ":depth_shaders",
        ":painter_shader",
    ],
)

drake_cc_library(
    name = "depth_shaders",
    hdrs = ["depth_shaders.h"],
)

drake_cc_library(
    name = "painter_shader",
    srcs = ["painter_shader.cc"],
    hdrs = ["painter_shader.h"],
    deps = [
        "//common:essential",
        "//geometry:geometry_roles",
        "//geometry/render:render_label",
        "//systems/sensors:color_palette",
        "@vtk//:vtkIOImage",
        "@vtk//:vtkRenderingOpenGL2",
    ],
)

add_lint_tests()
